--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <!-- Header -->
     <header>
-        <img src="images/M&ALogo_small.png" alt="Mangoes&Almonds Logo">
+        <img src="M&ALogo_small.png" alt="Mangoes&Almonds Logo">
         <h1>Mangoes&Almonds Photography</h1>
         <nav>
             <ul>
@@ -201,7 +201,7 @@
         <h2>Services</h2>
         <div class="service-grid">
             <div class="service-item">
-                <img src="images/candid_photography.jpg" alt="Candid Photography">
+                <img src="candid_photography.jpg" alt="Candid Photography">
                 <h3>Candid Photography</h3>
             </div>
             <div class="service-item">
@@ -226,11 +226,6 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Mangoes&Almonds Photography. All rights reserved.</p>
-        <div class="social-icons">
-            <img src="images/facebook_icon.png" alt="Facebook">
-            <img src="images/instagram_icon.png" alt="Instagram">
-            <img src="images/twitter_icon.png" alt="Twitter">
-        </div>
     </footer>
 </body>
 </html>
