--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h2>Baby Shoot</h2>
         <p class="quirky-tagline">"Tiny toes and giggles galore!"</p>
         <div class="gallery">
-            <img src="images/baby_shoot_1.jpg" alt="Baby Shoot 1" onclick="expandImage(this)">
+            <img src="baby_shoot_1.jpg" alt="Baby Shoot 1" onclick="expandImage(this)">
             <img src="images/baby_shoot_2.jpg" alt="Baby Shoot 2" onclick="expandImage(this)">
             <img src="images/baby_shoot_3.jpg" alt="Baby Shoot 3" onclick="expandImage(this)">
         </div>
