--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 <body>
 
     <header>
-        <img src="images/M&ALogo.jpg" alt="Mangoes&Almonds Logo">
+        <img src="M&ALogo.jpg" alt="Mangoes&Almonds Logo">
         <div>
             <h1>Mangoes&Almonds</h1>
             <h2>"Where Memories are as Sweet as Mangoes & Almonds"</h2>
         </div>
         <a href="https://wa.me/12345678900" target="_blank">
-            <img src="images/whatsapp_icon.png" alt="WhatsApp" class="whatsapp-icon">
+            <img src="whatsapp_icon.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
     </header>
 
@@ -139,8 +139,8 @@
         <p class="quirky-tagline">"Tiny toes and giggles galore!"</p>
         <div class="gallery">
             <img src="baby_shoot_1.jpg" alt="Baby Shoot 1" onclick="expandImage(this)">
-            <img src="images/baby_shoot_2.jpg" alt="Baby Shoot 2" onclick="expandImage(this)">
-            <img src="images/baby_shoot_3.jpg" alt="Baby Shoot 3" onclick="expandImage(this)">
+            <img src="baby_shoot_2.jpg" alt="Baby Shoot 2" onclick="expandImage(this)">
+            <img src="baby_shoot_3.jpg" alt="Baby Shoot 3" onclick="expandImage(this)">
         </div>
     </section>
 
@@ -148,9 +148,9 @@
         <h2>Professional</h2>
         <p class="quirky-tagline">"Capturing your best self!"</p>
         <div class="gallery">
-            <img src="images/professional_1.jpg" alt="Professional 1" onclick="expandImage(this)">
-            <img src="images/professional_2.jpg" alt="Professional 2" onclick="expandImage(this)">
-            <img src="images/professional_3.jpg" alt="Professional 3" onclick="expandImage(this)">
+            <img src="professional_1.jpg" alt="Professional 1" onclick="expandImage(this)">
+            <img src="professional_2.jpg" alt="Professional 2" onclick="expandImage(this)">
+            <img src="professional_3.jpg" alt="Professional 3" onclick="expandImage(this)">
         </div>
     </section>
 
@@ -158,8 +158,8 @@
         <h2>Food</h2>
         <p class="quirky-tagline">"Deliciousness on a plate!"</p>
         <div class="gallery">
-            <img src="images/food_1.jpg" alt="Food 1" onclick="expandImage(this)">
-            <img src="images/food_2.jpg" alt="Food 2" onclick="expandImage(this)">
+            <img src="food_1.jpg" alt="Food 1" onclick="expandImage(this)">
+            <img src="food_2.jpg" alt="Food 2" onclick="expandImage(this)">
         </div>
     </section>
 
